# guard-2-hire-1

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  run_demo.py
.streamlit/: config.toml
hireguard/: db.py  graph.py  guardrails.py  llm.py  settings.py  state.py
hireguard/agents/: counsel.py  intake.py  policy.py  risk.py
hireguard/prompts/: counsel.md  intake.md  policy.md  risk.md
hireguard/rag/: migrations.sql  ruleset.json
hireguard/samples/: bengaluru_internship_role.json  chennai_sales_role.json  delhi_startup_role.json  gurgaon_frontdesk_role.json  kolkata_injection_role.json  mumbai_factory_role.json  pune_clean_finance_role.json
hireguard/tools/: fetch_indian_statute.py  web_search.py
hireguard/ui/: streamlit_app.py
tests/: test_graph_smoke.py  test_retrieval.py  test_scenarios.py  test_state_schemas.py  test_tools.py
tests/fixtures/: clean_packet.json  injection_packet.json  malformed_packet.json
