[project]
name = "hireguard-v2"
version = "0.1.0"
description = "Multi-agent hiring-compliance auditor (LangGraph + Supabase + Claude)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.9",
    "psycopg[binary,pool]>=3.2",
    "supabase>=2.9",
    "python-dotenv>=1.0",
    "streamlit>=1.40",
    "tavily-python>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hireguard*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
